one more try to fix the issue. Previous fix was causing date of the post to be hidden behind the header

--- a/src/components/ActionCard/Comment.scss
+++ b/src/components/ActionCard/Comment.scss
@@ -3,6 +3,7 @@
 .container {
   display: flex;
   padding: $base-unit 4 * $base-unit;
+  overflow-x: auto;
 
   &.self:not(.is-deleting):hover {
     background-color: $tc-gray-neutral-light;
